# hybrid_ffvideo_streamer

./: .gitignore  README.md  hybrid_ffvideo_streamer.py
command_line_args_parser/: CMakeLists.txt
command_line_args_parser/include/: command_line_args_parser.h  common_functions.h
command_line_args_parser/src/: command_line_args_parser.cpp  common_functions.cpp
configs/: config.json
version_printer/: setup.py  version_printer.pyx
video_streamer/: CMakeLists.txt
video_streamer/include/: common_functions.h  ptr_wrapper.cpp  ptr_wrapper.h  signal_number_setter.h  simple_wrapper.h  timeout_checker.h  video_streamer.h
video_streamer/src/: common_functions.cpp  signal_number_setter.cpp  simple_wrapper.cpp  timeout_checker.cpp  video_streamer.cpp
